# sobol

./: pyproject.toml  setup.py
examples/: Untitled.ipynb  psum.py  sobol_examples-floris_parallel.ipynb  sobol_examples.ipynb
examples/.ipynb_checkpoints/: sobol_examples-floris_parallel-checkpoint.ipynb
sobol/: __init__.py  __init__.py~  inputParam.py  inputParam.py~  sobolIndices.py  sobolIndices.py~
