[tool.poetry]
name = "sobol"
version = "0.1.0"
authors = ["Kerry Klemmer <ksklemmer@gmail.com>"]
description = "A package for calculating (grouped) sobol indices"
readme = "README.md"
requires-python = ">=3.87"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.7"
numpy = "*"
scipy = "*"
matplotlib = "*"
pandas = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"